fix swiper slider

--- a/scss/pages/section-main-product.scss
+++ b/scss/pages/section-main-product.scss
@@ -527,6 +527,8 @@ tab-element {
     }
     .swiper-container {
         overflow: hidden;
+        margin-top: 0;
+        padding-top: 0;
     }
     .main-product__list {
         list-style: none;
