--- a/sections/featured-posts.liquid
+++ b/sections/featured-posts.liquid
@@ -96,9 +96,9 @@
                             </li>
                         {% endfor %}
                     </ul>
-                    <div class="swiper-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
-                    <div class="swiper-button-next">{% render 'icons-svg', icons: 'next' %}</div>
-                    <div class="swiper-pagination featured-posts__pagination"></div>
+                    <div class="swiper-button-prev js-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
+                    <div class="swiper-button-next js-button-next">{% render 'icons-svg', icons: 'next' %}</div>
+                    <div class="swiper-pagination featured-posts__pagination js-pagination"></div>
                 </div>
             </swiper-section>
         </div>
