--- a/snippets/product-media-slider.liquid
+++ b/snippets/product-media-slider.liquid
@@ -30,50 +30,127 @@
                                     class="tabs__content js-tabpanel{% unless forloop.first %} hidden{% endunless %}"
                                     role="tabpanel"
                                 >
-                                    {%- for variant in product.variants -%}
-                                        {% assign values = variant.options | join: ' ' %}
-                                        {% if variant.options contains value %}
-                                            {% if variant.featured_image != blank %}
-                                                <div class="main-product__media--item">
-                                                    <picture
-                                                        class="main-product__media media__size--{{ img_size }} media"
-                                                        data-size="{{ img_size }}"
-                                                    >
-                                                        {% render 'image',
-                                                            image_box: variant.featured_image,
-                                                            image_box_class: 'main-product__image'
-                                                        %}
-                                                    </picture>
-                                                </div>
-                                                {% assign variant_variable = variant.metafields.custom.images_group.value %}
-                                                {% for image in variant_variable -%}
-                                                    <div class="main-product__media--item">
-                                                        <picture
-                                                            class="main-product__media media__size--{{ img_size }} media"
-                                                            data-size="{{ img_size }}"
-                                                        >
-                                                            {% render 'image',
-                                                                image_box: image,
-                                                                image_box_class: 'main-product__image'
-                                                            %}
-                                                        </picture>
-                                                    </div>
-                                                {% endfor -%}
-                                            {% else %}
-                                                <div class="main-product__media--item">
-                                                    <picture
-                                                        class="main-product__media media__size--{{ img_size }} media"
-                                                        data-size="{{ img_size }}"
-                                                    >
-                                                        {% render 'image',
-                                                            image_box: current_variant.featured_image,
-                                                            image_box_class: 'main-product__image'
-                                                        %}
-                                                    </picture>
-                                                </div>
-                                            {% endif %}
-                                        {% endif %}
-                                    {%- endfor -%}
+                                    <slider-main-product>
+                                        <div class="swiper-container js-gallery swiper-gallery">
+                                            <ul class="main-product__list swiper-wrapper">
+                                                {%- for variant in product.variants -%}
+                                                    {% assign values = variant.options | join: ' ' %}
+                                                    {% if variant.options contains value %}
+                                                        {% if variant.featured_image != blank %}
+                                                            <li class="main-product__item swiper-slide">
+                                                                <div class="main-product__media--item">
+                                                                    <picture
+                                                                        class="main-product__media media__size--{{ img_size }} media"
+                                                                        data-size="{{ img_size }}"
+                                                                    >
+                                                                        {% render 'image',
+                                                                            image_box: variant.featured_image,
+                                                                            image_box_class: 'main-product__image'
+                                                                        %}
+                                                                    </picture>
+                                                                </div>
+                                                            </li>
+                                                            {% assign variant_variable = variant.metafields.custom.images_group.value %}
+                                                            {% for image in variant_variable -%}
+                                                                <li class="main-product__item swiper-slide">
+                                                                    <div class="main-product__media--item">
+                                                                        <picture
+                                                                            class="main-product__media media__size--{{ img_size }} media"
+                                                                            data-size="{{ img_size }}"
+                                                                        >
+                                                                            {% render 'image',
+                                                                                image_box: image,
+                                                                                image_box_class: 'main-product__image'
+                                                                            %}
+                                                                        </picture>
+                                                                    </div>
+                                                                </li>
+                                                            {% endfor -%}
+                                                        {% else %}
+                                                            <li class="main-product__item swiper-slide">
+                                                                <div class="main-product__media--item">
+                                                                    <picture
+                                                                        class="main-product__media media__size--{{ img_size }} media"
+                                                                        data-size="{{ img_size }}"
+                                                                    >
+                                                                        {% render 'image',
+                                                                            image_box: current_variant.featured_image,
+                                                                            image_box_class: 'main-product__image'
+                                                                        %}
+                                                                    </picture>
+                                                                </div>
+                                                            </li>
+                                                        {% endif %}
+                                                    {% endif %}
+                                                {%- endfor -%}
+                                            </ul>
+                                            <div class="swiper-pagination js-pagination"></div>
+                                        </div>
+                                        <div class="swiper-gallery-box">
+                                            <div
+                                                class="swiper-container js-gallery-thumb swiper-gallery-thumb"
+                                            >
+                                                <ul class="main-product__thumb swiper-wrapper">
+                                                    {%- for variant in product.variants -%}
+                                                        {% assign values = variant.options | join: ' ' %}
+                                                        {% if variant.options contains value %}
+                                                            {% if variant.featured_image != blank %}
+                                                                <li class="main-product__item--thumb swiper-slide">
+                                                                    <div class="main-product__media--item">
+                                                                        <picture
+                                                                            class="main-product__media media__size--{{ img_size }} media"
+                                                                            data-size="{{ img_size }}"
+                                                                        >
+                                                                            {% render 'image',
+                                                                                image_box: variant.featured_image,
+                                                                                image_box_class: 'main-product__image'
+                                                                            %}
+                                                                        </picture>
+                                                                    </div>
+                                                                </li>
+                                                                {% assign variant_variable = variant.metafields.custom.images_group.value %}
+                                                                {% for image in variant_variable -%}
+                                                                    <li class="main-product__item--thumb swiper-slide">
+                                                                        <div class="main-product__media--item">
+                                                                            <picture
+                                                                                class="main-product__media media__size--{{ img_size }} media"
+                                                                                data-size="{{ img_size }}"
+                                                                            >
+                                                                                {% render 'image',
+                                                                                    image_box: image,
+                                                                                    image_box_class: 'main-product__image'
+                                                                                %}
+                                                                            </picture>
+                                                                        </div>
+                                                                    </li>
+                                                                {% endfor -%}
+                                                            {% else %}
+                                                                <li class="main-product__item--thumb swiper-slide">
+                                                                    <div class="main-product__media--item">
+                                                                        <picture
+                                                                            class="main-product__media media__size--{{ img_size }} media"
+                                                                            data-size="{{ img_size }}"
+                                                                        >
+                                                                            {% render 'image',
+                                                                                image_box: current_variant.featured_image,
+                                                                                image_box_class: 'main-product__image'
+                                                                            %}
+                                                                        </picture>
+                                                                    </div>
+                                                                </li>
+                                                            {% endif %}
+                                                        {% endif %}
+                                                    {%- endfor -%}
+                                                </ul>
+                                            </div>
+                                            <div class="swiper-button-prev js-button-prev">
+                                                {% render 'icons-svg', icons: 'prev' %}
+                                            </div>
+                                            <div class="swiper-button-next js-button-next">
+                                                {% render 'icons-svg', icons: 'next' %}
+                                            </div>
+                                        </div>
+                                    </slider-main-product>
                                 </div>
                             {% endfor %}
                         {% endif %}
@@ -138,8 +215,9 @@
                             {%- endunless -%}
                         {%- endfor -%}
                     </ul>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination js-pagination"></div>
                 </div>
+
                 <div class="swiper-gallery-box">
                     <div
                         class="swiper-container js-gallery-thumb swiper-gallery-thumb"
@@ -197,8 +275,8 @@
                             {%- endfor -%}
                         </ul>
                     </div>
-                    <div class="swiper-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
-                    <div class="swiper-button-next">{% render 'icons-svg', icons: 'next' %}</div>
+                    <div class="swiper-button-prev js-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
+                    <div class="swiper-button-next js-button-next">{% render 'icons-svg', icons: 'next' %}</div>
                 </div>
             </slider-main-product>
         {% endif %}
@@ -221,7 +299,7 @@
                         </li>
                     {% endfor %}
                 </ul>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination js-pagination"></div>
             </div>
             <div class="swiper-gallery-box">
                 <div
@@ -242,8 +320,8 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="swiper-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
-                <div class="swiper-button-next">{% render 'icons-svg', icons: 'next' %}</div>
+                <div class="swiper-button-prev js-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
+                <div class="swiper-button-next js-button-next">{% render 'icons-svg', icons: 'next' %}</div>
             </div>
         </slider-main-product>
     {%- endif -%}
