--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -1,4 +1,4 @@
-<div class="main-product__details-img  details-img-defaults details-img-column">
+<div class="main-product__details-img main-product__details-img--{{ img_fill }}  details-img-defaults details-img-column">
     {%- if current_variant.featured_image != blank -%}
         {% if grouped_product %}
             <tab-element autofocus="false">
