--- a/snippets/product-media-card.liquid
+++ b/snippets/product-media-card.liquid
@@ -1,4 +1,5 @@
 {% liquid
+    assign img_fill = 'fill'
     assign img_size = 'square'
     assign img_view = 'slider'
     assign grouped_product = product.metafields.custom.grouped_images.value
@@ -17,6 +18,7 @@
         product: product,
         image_box: image_box,
         img_size: img_size,
+        img_fill: img_fill,
         grouped_product: grouped_product,
         current_variant: current_variant,
         variant_images: variant_images
@@ -26,6 +28,7 @@
         product: product,
         image_box: image_box,
         img_size: img_size,
+        img_fill: img_fill,
         grouped_product: grouped_product,
         current_variant: current_variant,
         variant_images: variant_images
